--- a/PhysicsEngine/PhysicsEngine.vcxproj.filters
+++ b/PhysicsEngine/PhysicsEngine.vcxproj.filters
@@ -39,11 +39,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Origine.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
     <ClCompile Include="src\Math\Vector2.cpp">
       <Filter>File di origine\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
