--- a/PhysicsEngine/PhysicsEngine.vcxproj
+++ b/PhysicsEngine/PhysicsEngine.vcxproj
@@ -21,9 +21,11 @@
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Math\Vector2.cpp" />
+    <ClCompile Include="src\Physics\RigidBody.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Math\Vector2.h" />
+    <ClInclude Include="include\Physics\RigidBody.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
