--- a/PhysicsEngine/PhysicsEngine.vcxproj.filters
+++ b/PhysicsEngine/PhysicsEngine.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\Collision\CollisionDetection.cpp">
       <Filter>File di origine\Collision</Filter>
     </ClCompile>
+    <ClCompile Include="src\Rendering\SFMLRenderer.cpp">
+      <Filter>File di origine\Rendering</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Math\Vector2.h">
@@ -79,6 +82,9 @@
     </ClInclude>
     <ClInclude Include="include\Collision\CollisionDetection.h">
       <Filter>File di intestazione\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Rendering\SFMLRenderer.h">
+      <Filter>File di intestazione\Rendering</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
