feat: Re-integrate QuadTree spatial optimization

--- a/PhysicsEngine/PhysicsEngine.vcxproj
+++ b/PhysicsEngine/PhysicsEngine.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Collision\AABB.cpp" />
+    <ClCompile Include="src\Collision\QuadTree.cpp" />
     <ClCompile Include="src\Constraints\DistanceConstraints.cpp" />
     <ClCompile Include="src\Collision\CollisionDetection.cpp" />
     <ClCompile Include="src\Input\MouseHandler.cpp" />
@@ -30,7 +32,9 @@
     <ClCompile Include="src\Rendering\SFMLRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Collision\AABB.h" />
     <ClInclude Include="include\Collision\CollisionDetection.h" />
+    <ClInclude Include="include\Collision\Quadtree.h" />
     <ClInclude Include="include\Constraints\DistanceConstraints.h" />
     <ClInclude Include="include\Input\MouseHandler.h" />
     <ClInclude Include="include\Math\Vector2.h" />
