--- a/PhysicsEngine/PhysicsEngine.vcxproj.filters
+++ b/PhysicsEngine/PhysicsEngine.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClCompile Include="src\Input\MouseHandler.cpp">
       <Filter>File di origine\Input</Filter>
     </ClCompile>
+    <ClCompile Include="src\Collision\QuadTree.cpp">
+      <Filter>File di origine\Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Collision\AABB.cpp">
+      <Filter>File di origine\Collision</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Math\Vector2.h">
@@ -109,6 +115,12 @@
     </ClInclude>
     <ClInclude Include="include\Input\MouseHandler.h">
       <Filter>File di intestazione\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Collision\Quadtree.h">
+      <Filter>File di intestazione\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Collision\AABB.h">
+      <Filter>File di intestazione\Collision</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
